@@ -7,6 +7,7 @@
 	* Fixed problem: TYPO3SEARCH_xxx was not working
 	* Fixed problem: indexing configuration is still not on pages
 	* Fixed problem: page 1 is always displayed in the results
+	* Removed site title from search results
 
 09-10-2008	Dmitry Dulepov	<dmitry@typo3.org>
 
